--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "$$t = \\frac{mean(X_1)-mean(X_2)}{\\sqrt{\\frac{sd(X_1)^2}{n_1}+\\frac{sd(X_2)}{n_2}}}$$\n",
     "\n",
-    "A bit simplified, the test statistics $t$ is the rescaled the difference between the two populations $X_1$ and $X_2$ such that this is the difference to estimates the difference of the means as if they were two standard normal distributions. Thus, we can use the $t$ value and Student's $t$-distribution to calculate how probable it is, that these populations are observed, given that the means are not different. For this, we calculate the area under the $t$-distribution outside of $\\pm t$. "
+    "A bit simplified, the test statistics $t$ is the rescaled difference between the two populations $X_1$ and $X_2$ such that this is the difference to estimates the difference of the means as if they were two standard normal distributions. Thus, we can use the $t$ value and Student's $t$-distribution to calculate how probable it is, that these populations are observed, given that the means are not different. For this, we calculate the area under the $t$-distribution outside of $\\pm t$. "
    ]
   },
   {
@@ -200,8 +200,8 @@
     "\n",
     "The significance level is defined as the (acceptable) probability of rejecting the null hypothesis, given that it is true. While the significance level depends on the domains, commonly used values are 0.05, or more recently also 0.005. With the significance level, we can decide if we reject the null hypothesis or not: \n",
     "\n",
-    "- If $p-value > \\alpha$ we fail to reject the null hypothesis. This means that the data can be reasonably well explained, if the null hypothesis were true. \n",
-    "- If $p-value \\leq \\alpha$ we reject the null hypothesis and have a *statistically significant result*, e.g., a statistically significant difference of the mean values in case of the $t$-Test if both populations are normal. \n",
+    "- If $p$-$value > \\alpha$ we fail to reject the null hypothesis. This means that the data can be reasonably well explained, if the null hypothesis were true. \n",
+    "- If $p$-$value \\leq \\alpha$ we reject the null hypothesis and have a *statistically significant result*, e.g., a statistically significant difference of the mean values in case of the $t$-Test if both populations are normal. \n",
     "\n",
     "Please note that neither case means with absolute certainty that the null hypothesis or the alternative hypothesis is true. Hypothesis testing is probabilistic. When we fail to reject the null hypothesis, the null hypothesis could still be false, but this is not supported by the data. When we reject the null hypothesis, the null hypothesis could still be true, it is just unlikely - but not impossible! -  that such extreme data would be generated. This is also why we use the somewhat complicated wording of \"fail to reject\" or \"reject\" at some significance level. Absolute statements of the form \"there is a difference\", are not supported by hypothesis testing, only probabilistic statements of the form \"there is a statistically significant difference with a significance level of $\\alpha$. \n",
     "\n",
