--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -144,7 +144,7 @@
     "\n",
     "$$t = \\frac{mean(X_1)-mean(X_2)}{\\sqrt{\\frac{sd(X_1)^2}{n_1}+\\frac{sd(X_2)}{n_2}}}$$\n",
     "\n",
-    "A bit simplified, the test statistics $t$ is the rescaled difference between the two populations $X_1$ and $X_2$ such that this is the difference to estimates the difference of the means as if they were two standard normal distributions. Thus, we can use the $t$ value and Student's $t$-distribution to calculate how probable it is, that these populations are observed, given that the means are not different. For this, we calculate the area under the $t$-distribution outside of $\\pm t$. "
+    "A bit simplified, the test statistics $t$ is the rescaled difference between the two populations $X_1$ and $X_2$ such that $t$ estimates the difference of the means as if they were two standard normal distributions. Thus, we can use the $t$ value and Student's $t$-distribution to calculate how probable it is, that these populations are observed, given that the means are not different. For this, we calculate the area under the $t$-distribution outside of $\\pm t$. "
    ]
   },
   {
