small typos and clarifications

--- a/content/06_Clustering.ipynb
+++ b/content/06_Clustering.ipynb
@@ -480,9 +480,8 @@
     "This type of clustering is called EM clustering because of the algorithm used to determine the parameters of the clusters is called the *Expectation-Maximization algorithm*. The algorithm is in general similar to the $k$-Means algorithm we already know: we start with randomly initialized clusters and then iteratively update the clusters to better match the data. For the EM algorithm, the initialization means random mean values and random covariance matrices. Updates mean that the mean values and covariances are updated such that the *likelihood* that the data can be explained by the clusters is increased. We do not discuss the complete mathematical description of the EM algorithm, but rather look at a simplified version, where we update only the mean values and ignore the updates of the covariances. \n",
     "\n",
     "1. Randomly select initial normal distributions $C_1 \\sim (\\mu_1, \\Sigma_1), ..., C_k \\sim (\\mu_k, \\Sigma_k)$ with $\\mu_i \\in \\mathcal{F}$ the mean values and $\\Sigma_i \\in \\mathcal{F}\\times\\mathcal{F}$ the covariance matrices.\n",
-    "2. Expectation Step: Determine weights $$w_i(x) = \\frac{p(x|\\mu_i, \\Sigma_i)}{\\sum_{j=1}^k p(x|\\mu_j, \\Sigma_j)}$$ for all $x \\in X$. \n",
-    "3. Maximization Step: Update mean values as\n",
-    "$$\\mu_i = \\frac{1}{|X|}\\sum_{x \\in X} w_i(x)\\cdot x$$\n",
+    "2. Expectation Step: Determine weights $$w_i(x) = \\frac{p(x|\\mu_i, \\Sigma_i)}{\\sum_{j=1}^k p(x|\\mu_j, \\Sigma_j)}$$ for all $x \\in X$ and $i=1, ..., k$ as the index of the clusters.\n",
+    "3. Maximization Step: Update mean values as $$\\mu_i = \\frac{1}{|X|}\\sum_{x \\in X} w_i(x)\\cdot x$$ with $i=1, ..., k$ as the index of the clusters. \n",
     "4. Repeat steps 2 and 3 until\n",
     "  - Convergence, i.e., the clusters $C_i, i=1,...,k$  do no change anymore.\n",
     "  - A predefined maximum number of iterations is reached.\n",
