--- a/content/08_Regression.ipynb
+++ b/content/08_Regression.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "We may be interested in the relationship between different properties of cars. Two important properties are fuel consumption and the top speed of cars. Usually, cars that can reach a higher top speed have stronger motors that consume more fuel. With regression, we can model the relationship between the variables using data about a sample of cars. \n",
     "\n",
-    "A bit more abstract, classification looks as follows.\n",
+    "A bit more abstract, regression looks as follows.\n",
     "\n",
     "<img src=\"images/regression_general.png\" alt=\"Example for Classification\" style=\"width: 600px;\"/>\n",
     "\n",
