--- a/content/07_Classification.ipynb
+++ b/content/07_Classification.ipynb
@@ -191,7 +191,7 @@
     "| False omission rate | Percentage of negative predictions that are predicted incorrectly because they should be positive. | $FOR = \\frac{FN}{FN+TN}$ |\n",
     "| Accuracy | Percentage of correct predictions. | $accuracy = \\frac{TP+TN}{TP+TN+FP+FN}$ |\n",
     "| F1 measure | Harmonic mean of recall and precision. | $F_1 = 2\\cdot\\frac{precision \\cdot recall}{precision+recall}$ |\n",
-    "| Matthews correlation coefficient (MCC) | Correlation between the prediction and the actual values. | $MCC = \\frac{TP\\cdot TN - FP\\cdot FN}{\\sqrt{(TP+FP)(FP+FN)(TN+FP)(TN+FN)}}$ |\n",
+    "| Matthews correlation coefficient (MCC) | Correlation between the prediction and the actual values. | $MCC = \\frac{TP\\cdot TN - FP\\cdot FN}{\\sqrt{(TP+FP)(TP+FN)(TN+FP)(TN+FN)}}$ |\n",
     "\n",
     "Since there is an abundance of metrics, the question is which metrics to use. The evaluation of eleven performance markers at the same time, many of which are strongly correlated, because they are all computed from the same four values from the confusion matrix, does not make sense. However, there is a logic behind these metrics, that can help with the decision which metrics should be used in a given use case. \n",
     "\n",
