--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "<img src=\"images/data_parallelism.png\" alt=\"Distributed Computing with Data Parallelism\" style=\"width: 600px;\"/>\n",
     "\n",
-    "The advantage of message passing and shared memory is that only parts of the data must be copied to each compute node. While this decreases the stress on the network, all data must still be transferred over network. Thus, data parallelization can handle larger amounts of data than message passing and shared memory, at some point the amount of data becomes too large for the transfer via the network. \n",
+    "The advantage of data parallelism is that only parts of the data must be copied to each compute node. While this decreases the stress on the network, all data must still be transferred over network. Thus, data parallelization can handle larger amounts of data than message passing and shared memory, at some point the amount of data becomes too large for the transfer via the network. \n",
     "\n",
     "### Data Locality\n",
     "\n",
