fix two small issues in the stats chapter and exercise

--- a/content/11_Statistics.ipynb
+++ b/content/11_Statistics.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "The difference we still have is that the $t$ distribution is for a specific mean value and standard deviation, while our hypothesis is for normal distributions with any mean value and standard distribution. This is why we need a *test statistic*, in case of the $t$-Test the $t$ value, which is defined as\n",
     "\n",
-    "$$t = \\frac{mean(X_1)-mean(X_2)}{\\sqrt{\\frac{sd(X_1)^2}{n_1}+\\frac{sd(X_2)}{n_2}}}$$\n",
+    "$$t = \\frac{mean(X_1)-mean(X_2)}{\\sqrt{\\frac{sd(X_1)^2}{n_1}+\\frac{sd(X_2)^2}{n_2}}}$$\n",
     "\n",
     "A bit simplified, the test statistics $t$ is the rescaled difference between the two populations $X_1$ and $X_2$ such that $t$ estimates the difference of the means as if they were two standard normal distributions. Thus, we can use the $t$ value and Student's $t$-distribution to calculate how probable it is, that these populations are observed, given that the means are not different. For this, we calculate the area under the $t$-distribution outside of $\\pm t$. "
    ]
