--- a/content/exercises/Solution_Statistics.ipynb
+++ b/content/exercises/Solution_Statistics.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -43,103 +43,103 @@
       "estimating performances of KNN and random forest with 5\n",
       "train/test splits\n",
       "\n",
-      "Random Forest: mean   = 0.9289 [0.9048,0.9530]\n",
-      "               sd     = 0.0275\n",
-      "               median = 0.9403\n",
-      "               min    = 0.8800\n",
-      "               max    = 0.9610\n",
-      "KNN:           mean   = 0.9448 [0.9220,0.9676]\n",
-      "               sd     = 0.0260\n",
-      "               median = 0.9403\n",
+      "Random Forest: mean   = 0.9183 [0.9051,0.9315]\n",
+      "               sd     = 0.0151\n",
+      "               median = 0.9210\n",
       "               min    = 0.9022\n",
-      "               max    = 0.9803\n",
+      "               max    = 0.9423\n",
+      "KNN:           mean   = 0.9377 [0.9187,0.9566]\n",
+      "               sd     = 0.0216\n",
+      "               median = 0.9403\n",
+      "               min    = 0.9061\n",
+      "               max    = 0.9610\n",
       "\n",
-      "p-value of Shapiro-Wilk test for random forest data:   0.5128\n",
+      "p-value of Shapiro-Wilk test for random forest data:   0.3981\n",
       "The test found that the data sample was normal, failing to reject\n",
       "the null hypothesis at significance level alpha=0.005\n",
       "\n",
-      "p-value of Shapiro-Wilk test for KNN data: 0.7981\n",
+      "p-value of Shapiro-Wilk test for KNN data: 0.4484\n",
       "The test found that the data sample was normal, failing to reject\n",
       "the null hypothesis at significance level alpha=0.005\n",
       "\n",
       "Both populations normal. Using Welch's t-test.\n",
       "\n",
-      "p-value of Welch's t-tests: 0.425976\n",
+      "p-value of Welch's t-tests: 0.183827\n",
       "The test found that the population means are equal, failing to\n",
       "reject the null hypothesis at significance level alpha=0.005\n",
       "----------------------------------------------------------------\n",
       "estimating performances of KNN and random forest with 10\n",
       "train/test splits\n",
       "\n",
-      "Random Forest: mean   = 0.9224 [0.9089,0.9358]\n",
-      "               sd     = 0.0266\n",
-      "               median = 0.9403\n",
-      "               min    = 0.8621\n",
-      "               max    = 0.9610\n",
-      "KNN:           mean   = 0.9355 [0.9262,0.9447]\n",
-      "               sd     = 0.0183\n",
-      "               median = 0.9403\n",
-      "               min    = 0.9022\n",
+      "Random Forest: mean   = 0.9233 [0.9066,0.9401]\n",
+      "               sd     = 0.0331\n",
+      "               median = 0.9210\n",
+      "               min    = 0.8658\n",
+      "               max    = 0.9803\n",
+      "KNN:           mean   = 0.9478 [0.9369,0.9587]\n",
+      "               sd     = 0.0215\n",
+      "               median = 0.9600\n",
+      "               min    = 0.9061\n",
       "               max    = 0.9803\n",
       "\n",
-      "p-value of Shapiro-Wilk test for random forest data:   0.0531\n",
+      "p-value of Shapiro-Wilk test for random forest data:   0.2464\n",
       "The test found that the data sample was normal, failing to reject\n",
       "the null hypothesis at significance level alpha=0.005\n",
       "\n",
-      "p-value of Shapiro-Wilk test for KNN data: 0.0658\n",
+      "p-value of Shapiro-Wilk test for KNN data: 0.1937\n",
       "The test found that the data sample was normal, failing to reject\n",
       "the null hypothesis at significance level alpha=0.005\n",
       "\n",
       "Both populations normal. Using Welch's t-test.\n",
       "\n",
-      "p-value of Welch's t-tests: 0.141088\n",
+      "p-value of Welch's t-tests: 0.029240\n",
       "The test found that the population means are equal, failing to\n",
       "reject the null hypothesis at significance level alpha=0.005\n",
       "----------------------------------------------------------------\n",
       "estimating performances of KNN and random forest with 50\n",
       "train/test splits\n",
       "\n",
-      "Random Forest: mean   = 0.9272 [0.9211,0.9333]\n",
-      "               sd     = 0.0251\n",
+      "Random Forest: mean   = 0.9255 [0.9184,0.9326]\n",
+      "               sd     = 0.0291\n",
+      "               median = 0.9210\n",
+      "               min    = 0.8658\n",
+      "               max    = 0.9803\n",
+      "KNN:           mean   = 0.9386 [0.9318,0.9454]\n",
+      "               sd     = 0.0281\n",
       "               median = 0.9403\n",
-      "               min    = 0.8621\n",
-      "               max    = 0.9610\n",
-      "KNN:           mean   = 0.9438 [0.9381,0.9495]\n",
-      "               sd     = 0.0234\n",
-      "               median = 0.9403\n",
-      "               min    = 0.8838\n",
+      "               min    = 0.8222\n",
       "               max    = 1.0000\n",
       "\n",
-      "p-value of Shapiro-Wilk test for random forest data:   0.0005\n",
-      "The test found that the data sample was not normal, rejecting the\n",
-      "null hypothesis at significance level alpha=0.005\n",
+      "p-value of Shapiro-Wilk test for random forest data:   0.0211\n",
+      "The test found that the data sample was normal, failing to reject\n",
+      "the null hypothesis at significance level alpha=0.005\n",
       "\n",
-      "p-value of Shapiro-Wilk test for KNN data: 0.0079\n",
+      "p-value of Shapiro-Wilk test for KNN data: 0.0005\n",
       "The test found that the data sample was not normal, rejecting the\n",
       "null hypothesis at significance level alpha=0.005\n",
       "\n",
       "At least one population not normal. Using Mann-Whitney-U test.\n",
       "\n",
-      "p-value of Mann-Whitney-U test: 0.000831\n",
+      "p-value of Mann-Whitney-U test: 0.002456\n",
       "The test found that the population means are not equal, rejecting\n",
       "the null hypothesis at significance level alpha=0.005\n",
-      "Effect size (Cohen's d): -0.678 - medium effect\n",
+      "Effect size (Cohen's d): -0.454 - small effect\n",
       "----------------------------------------------------------------\n",
       "estimating performances of KNN and random forest with 100\n",
       "train/test splits\n",
       "\n",
-      "Random Forest: mean   = 0.9263 [0.9222,0.9304]\n",
-      "               sd     = 0.0267\n",
-      "               median = 0.9240\n",
-      "               min    = 0.8409\n",
-      "               max    = 1.0000\n",
-      "KNN:           mean   = 0.9450 [0.9411,0.9490]\n",
-      "               sd     = 0.0258\n",
-      "               median = 0.9423\n",
+      "Random Forest: mean   = 0.9255 [0.9213,0.9297]\n",
+      "               sd     = 0.0277\n",
+      "               median = 0.9210\n",
       "               min    = 0.8602\n",
+      "               max    = 0.9803\n",
+      "KNN:           mean   = 0.9411 [0.9374,0.9448]\n",
+      "               sd     = 0.0242\n",
+      "               median = 0.9403\n",
+      "               min    = 0.8222\n",
       "               max    = 1.0000\n",
       "\n",
-      "p-value of Shapiro-Wilk test for random forest data:   0.0000\n",
+      "p-value of Shapiro-Wilk test for random forest data:   0.0002\n",
       "The test found that the data sample was not normal, rejecting the\n",
       "null hypothesis at significance level alpha=0.005\n",
       "\n",
@@ -152,7 +152,7 @@
       "p-value of Mann-Whitney-U test: 0.000000\n",
       "The test found that the population means are not equal, rejecting\n",
       "the null hypothesis at significance level alpha=0.005\n",
-      "Effect size (Cohen's d): -0.712 - medium effect\n"
+      "Effect size (Cohen's d): -0.600 - medium effect\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
     "\n",
     "    print()\n",
     "    print('p-value of Shapiro-Wilk test for KNN data: %.4f' % pval_shapiro2)\n",
-    "    if pval_shapiro1 > alpha:\n",
+    "    if pval_shapiro2 > alpha:\n",
     "        wrap_print('The test found that the data sample was normal, failing to reject the null hypothesis at significance level alpha=%.3f' % alpha)\n",
     "    else:\n",
     "        wrap_print(\n",
