updated preface and fixed broken links

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "However, this online book is more than just a short term fix due to the pandemic. This book is an interactive guide for getting started with data science. All code that is used, e.g., to perform analysis or to create visualizations is included and can be re-used by anyone.\n",
     "\n",
-    "The book is provided both [online](https://sherbold.github.io/intro-to-data-science/) and as a [PDF for printing](pdf/introductiontodatascience.pdf).\n",
+    "The book is provided both [online](https://sherbold.github.io/intro-to-data-science/) and as a [PDF for printing](pdf/introductiontodatascience.pdf). There are also [lecture slides](Slides), [exercises](Exercises), and [sample solutions](Solutions). \n",
     "\n",
     "## Target audience\n",
     "\n",
@@ -48,26 +48,7 @@
     "You should now be able to fire up your installation of Jupyter with the command ```jupyter notebook```. Jupyter Notebook runs in the browser and initially shows the home folder in your local file system. You can navigate to the destination where you downloaded the notebooks and open them. You could also upload them to the currently open folder using the browser. \n",
     "\n",
     "\n",
-    "## State of the Online Book\n",
-    "\n",
-    "This online book is still a work-in-progress and it will take some time before the book is finished. This section summarizes the current state.\n",
-    "\n",
-    "- Chapter 1: Finished.\n",
-    "- Chapter 2: Finished.\n",
-    "- Chapter 3: Finished.\n",
-    "- Chapter 4: Finished.\n",
-    "- Chapter 5: Finished.\n",
-    "- Chapter 6: Finished.\n",
-    "- Chapter 7: Finished.\n",
-    "- Chapter 8: Finished.\n",
-    "- Chapter 9: Finished.\n",
-    "- Chapter 10: Finished.\n",
-    "- Chapter 11: Finished.\n",
-    "- Chapter 12: Draft finished, requires proof reading.\n",
-    "- Exercises: Finished.\n",
-    "- Solutions: Finished.\n",
-    "- Appendix: Finished.\n",
-    "\n",
+    "## Reporting Problems\n",
     "\n",
     "If you find problems (e.g., spelling errors in chapters that are already proof read, blunders on my part like wrong formulas, formatting problems on the Website or in the PDF), please [open an issue on GitHub](https://github.com/sherbold/intro-to-data-science/issues)."
    ]
@@ -89,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
