--- a/content/Slides.ipynb
+++ b/content/Slides.ipynb
@@ -17,7 +17,7 @@
     "- Classification: [PDF](slides_pdf/07-Classification.pdf) / [Powerpoint](slides_pptx/07-Classification.pptx)\n",
     "- Regression: [PDF](slides_pdf/08-Regression.pdf) / [Powerpoint](slides_pptx/08-Regression.pptx)\n",
     "- Time Series Analysis: [PDF](slides_pdf/09-Time-Series-Analysis.pdf) / [Powerpoint](slides_pptx/09-Time-Series-Analysis.pptx)\n",
-    "- Text Mining: [PDF](slides_pdf/10-Text Mining.pdf) / [Powerpoint](slides_pptx/10-Text Mining.pptx)\n",
+    "- Text Mining: [PDF](slides_pdf/10-Text-Mining.pdf) / [Powerpoint](slides_pptx/10-Text-Mining.pptx)\n",
     "- Statistics: [PDF](slides_pdf/11-Statistical-Tests.pdf) / [Powerpoint](slides_pptx/11-Statistical-Tests.pptx)\n",
     "- Big Data Processings: [PDF](slides_pdf/12-BigDataMapReduce.pdf) / [Powerpoint](slides_pptx/12-BigDataMapReduce.pptx)"
    ]
