Typo in solution

--- a/content/exercises/Solution_Classification.ipynb
+++ b/content/exercises/Solution_Classification.ipynb
@@ -886,7 +886,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This detailed view of the performance shows us that the performance difference is mainly due to the classes 5 and 6. For both classes, the random forest is much better than the random forest. For all other classes, the performance is comparable. "
+    "This detailed view of the performance shows us that the performance difference is mainly due to the classes 5 and 6. For both classes, the 1-Nearest Neighbor is much better than the random forest. For all other classes, the performance is comparable. "
    ]
   }
  ],
