Typo in regression

--- a/content/exercises/Exercise_Regression.ipynb
+++ b/content/exercises/Exercise_Regression.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Regression\n",
     "\n",
-    "With this exercise, you can learn more about classification. You can try of different variants of linear regression on a data set and compare the performance with different metrics. You should also try to gain insights into the models through the coefficients. \n",
+    "With this exercise, you can learn more about regression. You can try of different variants of linear regression on a data set and compare the performance with different metrics. You should also try to gain insights into the models through the coefficients. \n",
     "\n",
     "## Libraries and Data\n",
     "\n",
