--- a/content/exercises/Solution_Text_Mining.ipynb
+++ b/content/exercises/Solution_Text_Mining.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we compare the word clouds, we can see that some terms are clearly scaled up: america, great, and job. Most other terms seem less important, e.g., peolle, fake, news, and country. "
+    "When we compare the word clouds, we can see that some terms are clearly scaled up: america, great, and job. Most other terms seem less important, e.g., people, fake, news, and country. "
    ]
   }
  ],
